--- a/exam/templates/exam/create.html
+++ b/exam/templates/exam/create.html
@@ -121,33 +121,33 @@
     if (elem.value == 0) {
       var questionChoice =
       '<div id="questionChoice_'+questionType_id+'">' +
-              '<div class="row form-group">'+
-                '<label for="question-name" class="col-md-2 control-label">Question</label>'+
-                '<div class="col-md-10">'+
-                  '<textarea class="form-control" rows="1" id="question-name" placeholder="Wording"></textarea>'+
-                '</div>'+
+          '<div class="row form-group">'+
+            '<label for="question-name" class="col-md-2 control-label">Question</label>'+
+            '<div class="col-md-10">'+
+              '<textarea class="form-control" rows="1" id="question-name" placeholder="Wording"></textarea>'+
+            '</div>'+
+          '</div>'+
+          '<div class="row form-group">'+
+            '<label for="alternatives" class="col-md-2 control-label">Alternatives</label>'+
+            '<div class="col-md-10" id="radios_'+questionType_id+'">'+
+              '<div class="radio radio-primary form-group">'+
+                '<label>'+
+                  '<input checked type="radio" name="multiple-choice" id="alternative1" value="1">'+
+                  '<textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>'+
+                '</label>'+
               '</div>'+
-              '<div class="row form-group">'+
-                '<label for="alternatives" class="col-md-2 control-label">Alternatives</label>'+
-                '<div class="col-md-10" id="radios">'+
-                  '<div class="radio radio-primary form-group">'+
-                    '<label>'+
-                      '<input checked type="radio" name="multiple-choice" id="alternative1" value="1">'+
-                      '<textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>'+
-                    '</label>'+
-                  '</div>'+
-                  '<div class="radio radio-primary form-group">'+
-                    '<label>'+
-                      '<input type="radio" name="multiple-choice" id="alternative2" value="2">'+
-                      '<textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>'+
-                    '</label>'+
-                  '</div>'+
-                '</div>'+
+              '<div class="radio radio-primary form-group">'+
+                '<label>'+
+                  '<input type="radio" name="multiple-choice" id="alternative2" value="2">'+
+                  '<textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>'+
+                '</label>'+
               '</div>'+
-              '<div class="form-group">'+
-                '<button type="button" class="btn btn-raised btn-primary" id="mc-new-alternative">New Alternative</button>'+
-              '</div>'+
-            '</div>';
+            '</div>'+
+          '</div>'+
+          '<div class="form-group">'+
+            '<button type="button" class="btn btn-raised btn-primary" id="newAlternative_'+questionType_id+'" onclick="functionNewAlternative('+questionType_id+')">New Alternative</button>'+
+          '</div>'+
+        '</div>';
     } else if (elem.value == 1) {
       var questionChoice =
         '<div id="questionChoice_'+questionType_id+'">'+
@@ -202,28 +202,17 @@
     $(questionChoice).insertBefore('#hr_'+questionType_id);
   }
 
-
-//asdasjdahsd
-  var id = 1;
-  $("#add_question").click(function(){
-    $.get("{% url 'course:exam:true_or_false_question' %}", function(data){
-
-      $("#questions").append(data);
-
-      $("#0").attr("id","true_" + id++);
-    });
-  });
-  var alternativeValue = 3;
-  $('#newAlternative').click(function () {
-    var element = '<div class="radio radio-primary">' +
+function functionNewAlternative(Question_Id){
+  $('radios_'+Question_Id).last()
+  var alternative = parseInt($("div input").last().val()) + 1;
+   var element = '<div class="radio radio-primary">' +
     '<label>' +
-    '<input type="radio" name="alternatives" id="alternative4"' + 'value="' +alternativeValue + '">' +
-    '<textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>' +
-    '</label>' +
+      '<input type="radio" name="alternatives" id="alternative_'+alternative+'_'+Question_Id+'"' + 'value="'+alternative+'">' +
+        '<textarea class="form-control" rows="1" placeholder="alternative '+alternative+' da questao '+Question_Id+'"></textarea>' +
+      '</label>'+
     '</div>';
-    $('#radios').append(element);
-    alternativeValue++;
-  });
+    $('#radios_'+Question_Id).append(element);
+}
   var tfAlternativeValue = 3;
   $('#tfAlternative').click(function () {
     var element = '<div class="radio radio-primary">' +
