--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -38,8 +38,8 @@
 								{% else %}
 									<label for="{{ field.auto_id }}">{{ field.label }}</label>
 								{% endif %}
-								<input type="text" class="form-control input-sm date-picker" name="{{field.name}}" min="{{now|date:'SHORT_DATE_FORMAT'}}">
 
+                {% render_field field class='form-control date-picker' %}
 							{% elif field.auto_id == 'id_image' %}
 		                		{% if field.field.required %}
 									<label for="{{ field.auto_id }}">{{ field.label }}<span>*</span></label>
@@ -136,4 +136,11 @@
 </br>
 </br>
 </br>
+<script type="text/javascript">
+var locale = navigator.language || navigator.userLanguage;
+
+$('.date-picker').datepicker({
+	language: locale,
+});
+</script>
 {% endblock %}
