--- a/users/templates/users/create.html
+++ b/users/templates/users/create.html
@@ -123,10 +123,10 @@
 							{% endif %}
 						</div>
 					{% endfor %}
-					<div class="col-md-offset-2 col-md-2 col-sm-2 col-xs-2">
+					<div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 text-center">
 						<input type="submit" value="{% trans 'Save' %}" class="btn btn-raised btn-success" onclick="validarCpfSemAlert(id_cpf, CPF, idElementoMensagemErro)'" />
 					</div>
-					<div class="col-md-offset-4 col-md-2 col-sm-2 col-xs-2">
+					<div class="col-md-5 col-xs-6 col-sm-6 col-lg-5 text-center">
 						<a href="{% url 'users:manage' %}" class="btn btn-raised btn-danger" >{% trans 'Cancel' %}</a>
 					</div>
 				</form>
