Removed messages and notifications icons, changed Anonymous User to Guest(With translations) and fixed translations [Issues:#416,#398]

--- a/core/templates/guest.html
+++ b/core/templates/guest.html
@@ -64,24 +64,7 @@
                 </div>
                 <div class="navbar-collapse collapse navbar-responsive-collapse">
                 <ul class="nav navbar-nav navbar-right notifications">
-                         <li class="" data-toggle="tooltip" data-placement="bottom" title data-original-title="notifications">
-                 <a  class="dropdown-toggle" data-toggle="dropdown"> <span id="notification-count" class="badge notification-count">{{notifications.count}}</span><i class="fa fa-bell" aria-hidden="true"></i></a>
-                   <ul id="notification-dropdown" class="dropdown-menu">
-                   <li class="dropdown-header">{% trans 'Notifications' %}</li>
-                        {% include "notifications.html" %}
-
-                        <li>
-                         <a onclick="getNotifications(5)">
-                            <div id="notification-see-more" class="list-group-item">
-                                  <div class="row-content">
-                                    <p class="list-group-item-text">{% trans 'See More' %}</p>
-                                </div>
-                       </a>
-                        </li>
-                    </ul>
-               </li>
-             			<li  data-toggle="tooltip" data-placement="bottom" title data-original-title="{% trans 'messages' %}"> <a href="#"><i class="fa fa-comments" aria-hidden="true"></i></a> </li>
-             			<li > <a  class="link" href="{% url 'app:index' %}">{{ user }}</a></li>
+             			<li > <a  class="link" href="{% url 'app:index' %}">{% trans 'Guest' %}</a></li>
                         <li data-toggle="tooltip" data-placement="bottom" title data-original-title="log out"> <a href="{% url 'app:index' %}"><i class="fa fa-sign-out" aria-hidden="true"></i></a></li>
            		</ul>
          		</div>
@@ -112,7 +95,7 @@
 						<form id="searchform" action="{% url 'course:manage' %}" method="get" accept-charset="utf-8">
 							<div class="input-group">
 							  <div class="form-group is-empty">
-							  <input type="search" class="form-control" placeholder="Search Courses" name="q" id="searchbox"></div>
+							  <input type="search" class="form-control" placeholder="{% trans 'Search Courses' %}" name="q" id="searchbox"></div>
 							    <span class="input-group-btn input-group-sm">
 							      <button type="button" class="btn btn-fab btn-fab-mini">
 							        <i class="material-icons">search</i>
@@ -137,7 +120,7 @@
                                         <h4 class="panel-title">
                                             <a  class="category-course-link" data-toggle="collapse" href="#{{category.slug}}">{{category.name}}</a>
                                         </h4>
-                                        
+
                                     </div>
                                     <div id="{{category.slug}}" class="panel-collapse collapse">
                                         {% for course in category.course_category.all %}
