--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -98,7 +98,7 @@
                 {% if user|has_role:'system_admin' %}
                     
                     <li>
-                      <a href="#menu_users" class="accordion" data-toggle="collapse">{% trans 'Manage Users' %}<span class="pull-right glyphicon glyphicon-chevron-down"></span></a>
+                      <a href="#menu_users" class="accordion" data-toggle="collapse">{% trans 'Users' %}<span class="pull-right glyphicon glyphicon-chevron-down"></span></a>
                       <div id="menu_users" class="collapse">
                         <ul class="nav nav-pill nav-stacked accordion_list">
                           <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
