Return message when updating user adjusted

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -102,7 +102,7 @@
                       <div id="menu_users" class="collapse">
                         <ul class="nav nav-pill nav-stacked accordion_list">
                           <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
-                          <li> <a href="{% url 'users:create' %}">{% trans 'Add User' %}</a></li>
+                          <li> <a href="{% url 'users:create' %}">{% trans 'Create User' %}</a></li>
                         </ul>
                       </div> 
                     </li>
