--- a/exercise/templates/exercise/create_exercise.html
+++ b/exercise/templates/exercise/create_exercise.html
@@ -5,7 +5,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-        <h4 class="modal-title" id="createExercise">{% trans 'Create a New Exercise' %}</h4>
+        <h4 class="modal-title" id="createExercise">{% trans 'Create a New Material' %}</h4>
       </div>
       <div class="modal-body">
         <!-- Card -->
