--- a/courses/templates/category/index.html
+++ b/courses/templates/category/index.html
@@ -1,14 +1,14 @@
 {% extends 'home.html' %}
 
 {% load static i18n %}
-{% load static i18n permission_tags %}
+{% load static i18n permission_tags django_bootstrap_breadcrumbs %}
 {% load widget_tweaks %}
 
 {% block breadcrumbs %}
-	<ol class="breadcrumb">
-	  	<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-	  	<li class="active">{% trans 'Manage Categories' %}</li>
-	</ol>
+
+  {{ block.super }}
+  {% breadcrumb 'Manage Categories' 'course:manage_cat' %}
+
 {% endblock %}
 
 {% block content %}
