--- a/courses/templates/course/create.html
+++ b/courses/templates/course/create.html
@@ -1,13 +1,12 @@
-{% extends 'home.html' %}
+{% extends 'course/index.html' %}
 
-{% load static i18n %}
-{% load widget_tweaks %}
+{% load widget_tweaks static i18n permission_tags django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
-	<ol class="breadcrumb">
-	  	<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-	  	<li class="active">{% trans 'Create Course' %}</li>
-	</ol>
+
+  {{ block.super }}
+  {% breadcrumb 'Create Course' 'course:create' %}
+
 {% endblock %}
 
 {% block content %}
