--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -16,7 +16,7 @@
 {% block breadcrumbs %}
 
   {{ block.super }}
-  {% breadcrumb 'Course Detail' 'course:view' course.slug %}
+  {% breadcrumb course 'course:view' course.slug %}
 
 {% endblock %}
 
