--- a/courses/templates/subject/index.html
+++ b/courses/templates/subject/index.html
@@ -1,6 +1,6 @@
-{% extends 'home.html' %}
+{% extends 'course/view.html' %}
 
-{% load static i18n permission_tags professor_access %}
+{% load static i18n permission_tags professor_access django_bootstrap_breadcrumbs %}
 
 {% block javascript %}
   <script type="text/javascript" src="{% static 'js/forum.js' %}"></script>
@@ -13,12 +13,8 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-  <ol class="breadcrumb">
-    <li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
-    <li><a href="{% url 'course:manage' %}">{% trans 'Courses' %}</a></li>
-    <li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
-    <li class="active">{{ subject }}</li>
-  </ol>
+    {{ block.super }}
+    {% breadcrumb subject 'course:view_subject' subject.slug %}
 {% endblock %}
 
 {% block content %}
